--- a/Hemtenta_Christian_Jarenfors/Hemtenta_Christian_Jarenfors.csproj
+++ b/Hemtenta_Christian_Jarenfors/Hemtenta_Christian_Jarenfors.csproj
@@ -43,16 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IAccount.cs" />
-    <Compile Include="IBlogg.cs" />
-    <Compile Include="IMusicPlayer.cs" />
-    <Compile Include="IWebshop.cs" />
+    <Compile Include="bank\Account.cs" />
+    <Compile Include="Bank.cs" />
+    <Compile Include="blog\Blog.cs" />
+    <Compile Include="Cms.cs" />
+    <Compile Include="Music.cs" />
+    <Compile Include="music\MusicPlayer.cs" />
+    <Compile Include="Webshop.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="webshop\MyWebshop.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
