--- a/Test_Hemtenta_Christian_Jarenfors/Test_Hemtenta_Christian_Jarenfors.csproj
+++ b/Test_Hemtenta_Christian_Jarenfors/Test_Hemtenta_Christian_Jarenfors.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{22725E42-BB01-4D47-91F8-705EF9C097F6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HemtentaTdd2017</RootNamespace>
+    <RootNamespace>Test_Hemtenta_Christian_Jarenfors</RootNamespace>
     <AssemblyName>Test_Hemtenta_Christian_Jarenfors</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -35,6 +35,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.5.30.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.5.30\lib\net45\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=3.6.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.6.0\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -45,13 +57,27 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTestAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestBlogg.cs" />
+    <Compile Include="UnitTestMusicPlayer.cs" />
+    <Compile Include="UnitTestWebshop.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hemtenta_Christian_Jarenfors\Hemtenta_Christian_Jarenfors.csproj">
+      <Project>{5faa72e9-3de1-43b7-a19d-3d4a0663eeb4}</Project>
+      <Name>Hemtenta_Christian_Jarenfors</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
