--- a/Hemtenta_Christian_Jarenfors/Hemtenta_Christian_Jarenfors.csproj
+++ b/Hemtenta_Christian_Jarenfors/Hemtenta_Christian_Jarenfors.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Webshop.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="webshop\Basket.cs" />
     <Compile Include="webshop\MyWebshop.cs" />
   </ItemGroup>
   <ItemGroup>
