--- a/Test_Hemtenta_Christian_Jarenfors/Test_Hemtenta_Christian_Jarenfors.csproj
+++ b/Test_Hemtenta_Christian_Jarenfors/Test_Hemtenta_Christian_Jarenfors.csproj
@@ -82,6 +82,9 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="fråga 1.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
